--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -6,387 +6,20 @@ log-level: info
 external-controller: 0.0.0.0:9090
 proxies:
   - &id001
-    name: 🇨🇳_CN_中国
-    type: vmess
-    server: 159.75.178.50
-    port: 47551
-    cipher: auto
-    uuid: 2500a228-8c00-4934-81e0-22281c015a33
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id002
     name: 🇺🇸_US_美国_1
-    type: trojan
-    server: 172.234.99.161
-    port: 443
-    udp: true
-    password: 5f610684-118f-46cf-aa34-9951475b75ad
-    skip-cert-verify: true
-    network: tcp
-  - &id003
-    name: 🇬🇧_GB_英国
     type: vmess
-    server: Telegram-Channel.hkbb0.66688888.xyz
-    port: 2092
+    server: 45.58.153.24
+    port: 30000
     cipher: auto
-    uuid: 7b4680c5-222f-4a29-84c0-226d16dab9ab
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /telegram:@hkaa0
-      headers:
-        host: Telegram-Channel.hkbb0.66688888.xyz
-  - &id004
-    name: 🇵🇱_PL_波兰_1
-    type: vmess
-    server: pl2-vmess.sshmax.xyz
-    port: 80
-    cipher: auto
-    uuid: 900fbb93-4dba-40c1-be96-9aef165a7c2e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: pl2-vmess.sshmax.xyz
-  - &id005
-    name: 🇵🇱_PL_波兰_2
-    type: vmess
-    server: 94.131.96.137
-    port: 2086
-    cipher: auto
-    uuid: 900fbb93-4dba-40c1-be96-9aef165a7c2e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: 94.131.96.137
-  - &id006
-    name: 🇨🇦_CA_加拿大
-    type: vmess
-    server: 45.138.70.247
-    port: 38767
-    cipher: auto
-    uuid: ec3936a2-f50d-48e8-b0bc-7929067bcc00
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /11451
-  - &id007
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
-    type: ss
-    server: service.ouluyun9803.com
-    port: 50003
-    password: 057bf3ac-fda1-44c3-aa8e-07eed7ddc5b6
-    cipher: chacha20-ietf-poly1305
-  - &id008
-    name: 🇩🇪_DE_德国_1
-    type: trojan
-    server: 78.47.217.216
-    port: 993
-    udp: true
-    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
-    sni: www.casperco.online
-    skip-cert-verify: true
-    network: tcp
-  - &id009
-    name: 🇮🇳_IN_印度
-    type: vmess
-    server: ru-v2ray.ipracevpn.com
-    port: 8443
-    cipher: auto
-    uuid: 6b65926e-110d-4728-a807-5670d8829e09
-    alterId: 0
+    uuid: 4242f9e0-6b7e-4257-9e93-7ad38015c46a
+    alterId: 64
     tls: true
     skip-cert-verify: true
-    network: tcp
-  - &id010
-    name: 🇩🇪_DE_德国_2
-    type: trojan
-    server: 78.47.217.216
-    port: 1935
-    udp: true
-    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
-    sni: www.casperco.online
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇩🇪_DE_德国_3
-    type: trojan
-    server: www.casperco.online
-    port: 993
-    udp: true
-    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
-    skip-cert-verify: true
-    network: tcp
-  - &id012
-    name: 🇮🇷_IR_伊朗
-    type: vmess
-    server: 91.107.172.128
-    port: 3350
-    cipher: auto
-    uuid: 2bf900ac-909a-4610-dc18-86a3a136b286
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id013
+    network: ws
+    ws-opts:
+      path: /path/1702392255355
+  - &id002
     name: 🇺🇸_US_美国_2
-    type: vmess
-    server: singapore.com
-    port: 80
-    cipher: auto
-    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /api/v3/download.getFile
-      headers:
-        host: ssrsub.v03.ssrsub.com
-  - &id014
-    name: 🇵🇱_PL_波兰_3
-    type: vmess
-    server: 94.131.96.137
-    port: 80
-    cipher: auto
-    uuid: 900fbb93-4dba-40c1-be96-9aef165a7c2e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id015
-    name: 🇨🇳_CN_中国->🇸🇰_SK_斯洛伐克
-    type: trojan
-    server: gbs.pptv-tv.store
-    port: 17728
-    udp: true
-    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
-    skip-cert-verify: true
-    network: tcp
-  - &id016
-    name: 🇵🇱_PL_波兰_4
-    type: vmess
-    server: 94.131.96.137
-    port: 8080
-    cipher: auto
-    uuid: 900fbb93-4dba-40c1-be96-9aef165a7c2e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id017
-    name: 🇺🇸_US_美国_3
-    type: vmess
-    server: 172.233.188.217
-    port: 55579
-    cipher: auto
-    uuid: 610f7b76-a4e2-4b5a-c458-96e69cbffb5e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id018
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: ss
-    server: service.ouluyun9803.com
-    port: 21003
-    password: 057bf3ac-fda1-44c3-aa8e-07eed7ddc5b6
-    cipher: chacha20-ietf-poly1305
-  - &id019
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: 144.202.81.122
-    port: 25514
-    cipher: auto
-    uuid: 13bf827e-55cd-4b46-e9f1-b7f9ffbe7955
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id020
-    name: 🇵🇱_PL_波兰_5
-    type: vmess
-    server: 94.131.96.137
-    port: 2082
-    cipher: auto
-    uuid: 900fbb93-4dba-40c1-be96-9aef165a7c2e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id021
-    name: 🇷🇺_RU_俄罗斯联邦_1
-    type: ss
-    server: 45.144.30.202
-    port: 28490
-    password: yZdRgske85Hou96z2dRdtH
-    cipher: chacha20-ietf-poly1305
-  - &id022
-    name: 🇺🇸_US_美国_5
-    type: ss
-    server: 45.8.146.35
-    port: 47413
-    password: U1EYRQpU8rLGRKvDMfR6Fv
-    cipher: chacha20-ietf-poly1305
-  - &id023
-    name: 🇷🇺_RU_俄罗斯联邦_2
-    type: ss
-    server: 91.194.161.7
-    port: 8388
-    password: OWJlYjYy
-    cipher: chacha20-ietf-poly1305
-  - &id024
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 18.216.249.151
-    port: 46403
-    cipher: auto
-    uuid: 28dc6b61-09d8-4c19-b655-233cfb535567
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id025
-    name: 🇵🇱_PL_波兰_6
-    type: vmess
-    server: 94.131.96.137
-    port: 2095
-    cipher: auto
-    uuid: 900fbb93-4dba-40c1-be96-9aef165a7c2e
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-  - &id026
-    name: 🇺🇸_US_美国_7
-    type: vmess
-    server: 168.235.72.221
-    port: 15551
-    cipher: auto
-    uuid: 69510633-6acb-4291-a98e-0cdcc9bd5c51
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id027
-    name: 🇺🇸_US_美国_8
-    type: vmess
-    server: 94.131.10.135
-    port: 80
-    cipher: auto
-    uuid: 099b5b7a-9d71-43cd-80e3-b8fbe1cc2695
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: pt2-vmess.sshmax.xyz
-  - &id028
-    name: 🇸🇰_SK_斯洛伐克
-    type: vmess
-    server: 5.252.23.133
-    port: 80
-    cipher: auto
-    uuid: 2892f8c0-c4bc-49ad-b31f-2146b67d4f6c
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: 5.252.23.133
-  - &id029
-    name: 🇩🇪_DE_德国_4
-    type: trojan
-    server: 3.70.124.85
-    port: 22222
-    udp: true
-    password: telegram-id-privatevpns
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id030
-    name: 🇺🇸_US_美国_9
-    type: ss
-    server: 35.87.39.181
-    port: 443
-    password: amazonskr05
-    cipher: aes-256-cfb
-  - &id031
-    name: 🇩🇪_DE_德国_5
-    type: vmess
-    server: 217.160.45.31
-    port: 8880
-    cipher: auto
-    uuid: 4e186678-fcca-4325-e4bc-b2916bdf6708
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id032
-    name: 🇫🇷_FR_法国
-    type: trojan
-    server: 35.181.95.69
-    port: 22222
-    udp: true
-    password: telegram-id-directvpn
-    sni: trj.rollingnext.co.uk
-    skip-cert-verify: true
-    network: tcp
-  - &id033
-    name: 🇷🇺_RU_俄罗斯联邦_3
-    type: vmess
-    server: 46.29.166.237
-    port: 47555
-    cipher: auto
-    uuid: 0c49cd19-2758-4d38-e6a8-11f2d6635860
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id034
-    name: 🇺🇸_US_美国_10
-    type: vmess
-    server: 172.234.17.31
-    port: 48771
-    cipher: auto
-    uuid: f1c2be64-961b-407a-c4e0-b8919ca1253b
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id035
-    name: 🇺🇸_US_美国_11
     type: vmess
     server: ns1.v2-vip.fun
     port: 80
@@ -400,49 +33,34 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: ssrsub.v005.ssrsub.com
-  - &id036
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+  - &id003
+    name: 🇺🇸_US_美国_3
     type: vmess
-    server: us2.awslcn.info
-    port: 25257
+    server: 172.233.188.217
+    port: 55579
     cipher: auto
-    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us2.awslcn.info
-  - &id037
-    name: 🇨🇳_CN_中国->🇺🇸_US_美国_3
-    type: vmess
-    server: us1.awslcn.info
-    port: 25239
-    cipher: auto
-    uuid: 93ec7261-1c92-4149-848a-26b6fb9fc4ce
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: us1.awslcn.info
-  - &id038
-    name: 🇮🇷_IR_伊朗->🇫🇷_FR_法国
-    type: vmess
-    server: 81.12.27.4
-    port: 20554
-    cipher: auto
-    uuid: 5d0b61a0-64fc-4a9f-e4bc-50ecdbc37623
+    uuid: 610f7b76-a4e2-4b5a-c458-96e69cbffb5e
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: tcp
-  - &id039
-    name: 🇺🇸_US_美国_12
+  - &id004
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: singapore.com
+    port: 80
+    cipher: auto
+    uuid: b1e30339-a603-47d1-b31c-1d0ceb59952e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /api/v3/download.getFile
+      headers:
+        host: ssrsub.v03.ssrsub.com
+  - &id005
+    name: 🇺🇸_US_美国_5
     type: vmess
     server: cf-lt.sharecentre.online
     port: 80
@@ -456,6 +74,362 @@ proxies:
       path: /api/v3/download.getFile
       headers:
         host: ssrsub.v005.ssrsub.com
+  - &id006
+    name: 🇷🇺_RU_俄罗斯联邦_1
+    type: ss
+    server: 45.144.30.202
+    port: 28490
+    password: yZdRgske85Hou96z2dRdtH
+    cipher: chacha20-ietf-poly1305
+  - &id007
+    name: 🇨🇳_CN_中国_1
+    type: vmess
+    server: 159.75.178.50
+    port: 47551
+    cipher: auto
+    uuid: 2500a228-8c00-4934-81e0-22281c015a33
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id008
+    name: 🇩🇪_DE_德国_1
+    type: trojan
+    server: 5.104.108.120
+    port: 443
+    udp: true
+    password: e86e242e-b5d5-46ae-a410-3684f7d70ac2
+    skip-cert-verify: true
+    network: tcp
+  - &id009
+    name: 🇨🇦_CA_加拿大
+    type: vmess
+    server: 45.138.70.247
+    port: 38767
+    cipher: auto
+    uuid: ec3936a2-f50d-48e8-b0bc-7929067bcc00
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /11451
+  - &id010
+    name: 🇮🇷_IR_伊朗_1
+    type: vmess
+    server: duss.celebjared.pk
+    port: 80
+    cipher: auto
+    uuid: 781dfd50-3d2f-4d5b-99ef-47fa111bddb8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /Y07GAOt43udo1xvoAgfajHtB
+      headers:
+        host: duss.celebjared.pk
+  - &id011
+    name: 🇬🇧_GB_英国_1
+    type: vmess
+    server: UK99.5GTOCDOCAO.COM
+    port: 80
+    cipher: auto
+    uuid: 7a2c5296-683d-48db-9856-373cafac48b5
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /5gtocdocao.com
+  - &id012
+    name: 🇺🇸_US_美国_6
+    type: vmess
+    server: 18.216.249.151
+    port: 46403
+    cipher: auto
+    uuid: 28dc6b61-09d8-4c19-b655-233cfb535567
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id013
+    name: 🇨🇳_CN_中国->🇬🇧_GB_英国
+    type: trojan
+    server: gbs.pptv-tv.store
+    port: 17728
+    udp: true
+    password: 299a6171-b4ce-403a-8157-c3dad55ef3a2
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 132.145.132.227
+    port: 37121
+    cipher: auto
+    uuid: 93845b50-26f6-4203-f5ad-4d231d4e8f45
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id015
+    name: 🇺🇸_US_美国_8
+    type: vmess
+    server: 144.202.81.122
+    port: 25514
+    cipher: auto
+    uuid: 13bf827e-55cd-4b46-e9f1-b7f9ffbe7955
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id016
+    name: 🇷🇺_RU_俄罗斯联邦_2
+    type: vmess
+    server: avazbek-russian.duckdns.org
+    port: 8080
+    cipher: auto
+    uuid: d0fd80a1-0a99-43ea-a18c-046c5106a961
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+  - &id017
+    name: 🇺🇸_US_美国_9
+    type: vmess
+    server: 68.183.159.199
+    port: 2092
+    cipher: auto
+    uuid: 038e2714-5cbf-4812-fcfb-8726665c63b6
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: internet.life.com.by
+    network: ws
+    ws-opts:
+      path: /telegram:@hkaa0
+  - &id018
+    name: 🇮🇷_IR_伊朗_2
+    type: vmess
+    server: 185.235.137.9
+    port: 80
+    cipher: auto
+    uuid: 781dfd50-3d2f-4d5b-99ef-47fa111bddb8
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    servername: internet.life.com.by
+    network: ws
+    ws-opts:
+      path: /Y07GAOt43udo1xvoAgfajHtB
+  - &id019
+    name: 🇩🇪_DE_德国_2
+    type: trojan
+    server: 78.47.217.216
+    port: 1935
+    udp: true
+    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
+    sni: www.casperco.online
+    skip-cert-verify: true
+    network: tcp
+  - &id020
+    name: 🇨🇳_CN_中国_2
+    type: ss
+    server: 45.87.153.246
+    port: 6199
+    password: f7EI0dGWQM42T8gwN9CZIj
+    cipher: chacha20-ietf-poly1305
+  - &id021
+    name: 🇮🇷_IR_伊朗_3
+    type: vmess
+    server: 79.143.84.117
+    port: 24141
+    cipher: auto
+    uuid: 46465bbe-628a-4988-ae3c-0c164237a039
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id022
+    name: 🇺🇸_US_美国_10
+    type: vmess
+    server: cold-dawn-9246.fly.dev
+    port: 443
+    cipher: auto
+    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
+      headers:
+        host: cold-dawn-9246.fly.dev
+  - &id023
+    name: 🇸🇪_SE_瑞典
+    type: vmess
+    server: www.shopify.com
+    port: 2082
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: els_cdnone.yunjisuan.cf
+  - &id024
+    name: 🇺🇸_US_美国_11
+    type: vmess
+    server: www.visa.com
+    port: 2082
+    cipher: auto
+    uuid: bf3d038a-93a2-4e24-886c-6bc64e3c3a90
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: mgtow_cdn.yunjisuan.cf
+  - &id025
+    name: 🇺🇸_US_美国_12
+    type: vmess
+    server: sbl2.shabijichang.com
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id026
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: cdn-13.cdn2cdn.com
+    port: 2083
+    udp: true
+    password: qG9K8AGnn9XH5jUqeFu96g
+    sni: cdn13.cdn2cdn.com
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: cdn13.cdn2cdn.com
+  - &id027
+    name: 🇫🇷_FR_法国
+    type: ss
+    server: 185.231.205.80
+    port: 1443
+    password: MGQwNTgw
+    cipher: chacha20-ietf-poly1305
+  - &id028
+    name: 🇺🇸_US_美国_13
+    type: vmess
+    server: 104.237.128.72
+    port: 14432
+    cipher: auto
+    uuid: 4c09b776-6f83-4bf2-f7f7-4e286dbbb6da
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id029
+    name: 🇩🇪_DE_德国_3
+    type: trojan
+    server: www.casperco.online
+    port: 993
+    udp: true
+    password: 74811f39-8f69-4334-9e0f-a8a25d7413c1
+    sni: www.casperco.online
+    skip-cert-verify: true
+    network: tcp
+  - &id030
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 104.21.75.246
+    port: 80
+    cipher: auto
+    uuid: c458695d-6908-45c3-9512-e0c46418454c
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: sbl2.shabijichang.com
+  - &id031
+    name: 🇺🇸_US_美国_15
+    type: trojan
+    server: us5.msio.uk
+    port: 50089
+    udp: true
+    password: 801725d8-08df-4a20-b69a-e534b8c4ede7
+    skip-cert-verify: true
+    network: tcp
+  - &id032
+    name: 🇺🇸_US_美国_16
+    type: ss
+    server: 95.164.37.226
+    port: 8388
+    password: NjJkZmYw
+    cipher: chacha20-ietf-poly1305
+  - &id033
+    name: 🇺🇸_US_美国_17
+    type: ss
+    server: uk1.ssproxy.xyz
+    port: 8388
+    password: NjJkZmYw
+    cipher: chacha20-ietf-poly1305
+  - &id034
+    name: 🇺🇸_US_美国_18
+    type: vmess
+    server: 38.180.33.136
+    port: 50104
+    cipher: auto
+    uuid: 790f6802-7535-4109-de6d-15f676d5e3f7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id035
+    name: 🇬🇧_GB_英国_2
+    type: trojan
+    server: 35.178.97.234
+    port: 22222
+    udp: true
+    password: telegram-id-privatevpns
+    sni: trj.rollingnext.co.uk
+    skip-cert-verify: true
+    network: tcp
+  - &id036
+    name: 🇺🇸_US_美国_19
+    type: trojan
+    server: 23.162.168.236
+    port: 50089
+    udp: true
+    password: 801725d8-08df-4a20-b69a-e534b8c4ede7
+    sni: us5.msio.uk
+    skip-cert-verify: true
+    network: tcp
 proxy-groups:
   - name: PROXY
     type: select
@@ -518,9 +492,6 @@ proxy-groups:
       - *id034
       - *id035
       - *id036
-      - *id037
-      - *id038
-      - *id039
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -562,9 +533,6 @@ proxy-groups:
       - *id034
       - *id035
       - *id036
-      - *id037
-      - *id038
-      - *id039
   - name: SELECT
     type: select
     proxies:
@@ -604,9 +572,6 @@ proxy-groups:
       - *id034
       - *id035
       - *id036
-      - *id037
-      - *id038
-      - *id039
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
